# NakiMediaTool

./: .gitignore  .gitmodules  README.md  index.html
electron/main/: index.ts
electron/preload/: index.ts
native/: compile.md
native/sdk/: CMakeLists.txt  compile.md
native/sdk/src/: helloworld.c  main.c
src/: App.vue  main.ts  style.css
src/components/: ActivityBar.vue  HelloWorld.vue
